[gd_scene load_steps=2 format=3 uid="uid://nyljhx2rdsco"]

[ext_resource type="Script" path="res://garage.gd" id="1_f5sdx"]

[node name="Garage" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_f5sdx")

[node name="WeaponMenu" type="MenuButton" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -301.0
offset_top = -27.0
offset_right = -158.0
offset_bottom = 33.0
grow_horizontal = 2
grow_vertical = 2
focus_neighbor_right = NodePath("../BoosterMenu")
focus_mode = 2
text = "WEAPONS"
flat = false
item_count = 5
popup/item_0/text = "Blaster"
popup/item_0/checkable = 2
popup/item_0/checked = true
popup/item_0/id = 0
popup/item_1/text = "[$100] Rapid Fire"
popup/item_1/id = 1
popup/item_2/text = "Charge Blast"
popup/item_2/checkable = 2
popup/item_2/id = 2
popup/item_2/disabled = true
popup/item_3/text = "Shotgun Blast"
popup/item_3/checkable = 2
popup/item_3/id = 3
popup/item_3/disabled = true
popup/item_4/text = "Laser"
popup/item_4/checkable = 2
popup/item_4/id = 4
popup/item_4/disabled = true

[node name="BoosterMenu" type="MenuButton" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -74.0
offset_top = -28.0
offset_right = 69.0
offset_bottom = 32.0
grow_horizontal = 2
grow_vertical = 2
focus_neighbor_left = NodePath("../WeaponMenu")
focus_neighbor_right = NodePath("../LegMenu")
focus_mode = 2
text = "BOOSTERS"
flat = false
item_count = 5
popup/item_0/text = "Default Booster"
popup/item_0/checkable = 2
popup/item_0/checked = true
popup/item_0/id = 0
popup/item_1/text = "[$100] Fast Booster"
popup/item_1/id = 1
popup/item_2/text = "Charge Jump"
popup/item_2/checkable = 2
popup/item_2/id = 2
popup/item_2/disabled = true
popup/item_3/text = "Hot Air Balloon"
popup/item_3/checkable = 2
popup/item_3/id = 3
popup/item_3/disabled = true
popup/item_4/text = "Helicopter"
popup/item_4/checkable = 2
popup/item_4/id = 4
popup/item_4/disabled = true

[node name="LegMenu" type="MenuButton" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 177.0
offset_top = -30.0
offset_right = 320.0
offset_bottom = 30.0
grow_horizontal = 2
grow_vertical = 2
focus_neighbor_left = NodePath("../BoosterMenu")
focus_mode = 2
text = "LEGS"
flat = false
item_count = 5
popup/item_0/text = "Walker"
popup/item_0/checkable = 2
popup/item_0/checked = true
popup/item_0/id = 0
popup/item_1/text = "[$100] Skater"
popup/item_1/id = 1
popup/item_2/text = "Treads"
popup/item_2/checkable = 2
popup/item_2/id = 2
popup/item_2/disabled = true
popup/item_3/text = "Hovercraft"
popup/item_3/checkable = 2
popup/item_3/id = 3
popup/item_3/disabled = true
popup/item_4/text = "Propulsion"
popup/item_4/checkable = 2
popup/item_4/id = 4
popup/item_4/disabled = true

[node name="Button" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -82.0
offset_top = 89.0
offset_right = 82.0
offset_bottom = 154.0
grow_horizontal = 2
grow_vertical = 2
text = "Finish Build"

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_left = 50.0
offset_top = 516.0
offset_right = 231.0
offset_bottom = 610.0
color = Color(0.113725, 0.00784314, 0.0745098, 1)
metadata/_edit_group_ = true

[node name="Label" type="Label" parent="ColorRect"]
layout_mode = 0
offset_left = 9.0
offset_top = 42.0
offset_right = 156.0
offset_bottom = 90.0
theme_override_font_sizes/font_size = 32
text = "$500"

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
